--- a/scripts/085_each_pt_timecourse.Rmd
+++ b/scripts/085_each_pt_timecourse.Rmd
@@ -115,15 +115,15 @@ every_pt_list <-  c('P1') %>%
       geom_vline( xintercept = 0, color = 'darkgray', size = axis_line_thickness) +
       geom_text(
     data = all_annot[[.x]],  
-   mapping = aes(x = Inf, y = Inf, label = str_glue('{d_days} days')),  
+   mapping = aes(x = Inf, y = Inf, label = str_glue('Diet: {d_days} days')),  
     hjust = 1.6, vjust = 1,  
    size = 2,color = diet_line_color,
     inherit.aes = FALSE  
   ) +
       geom_text(
     data = all_annot[[.x]],  
-   mapping = aes(x = Inf, y = Inf, label = str_glue('{s_days} days')),  
-    hjust = 1.6, vjust = 2.5,  
+   mapping = aes(x = Inf, y = Inf, label = str_glue('Stool: {s_days} samples')),   
+    hjust = 1.3, vjust = 2.5,  
    size = 2,color = stool_line_color,
     inherit.aes = FALSE  
   ) +
@@ -178,8 +178,8 @@ whole_list <-  pids %>%
   ) +
       geom_text(
     data = all_annot[[.x]],  
-   mapping = aes(x = Inf, y = Inf, label = str_glue('{s_days} days')),  
-    hjust = 1.6, vjust = 2.5,  
+   mapping = aes(x = Inf, y = Inf, label = str_glue('{s_days} samples')),  
+    hjust = 1.2, vjust = 2.5,  
    size = 2,color = stool_line_color,
     inherit.aes = FALSE  
   ) +
