--- a/scripts/072_Figure_1__code_for_Figure_1.Rmd
+++ b/scripts/072_Figure_1__code_for_Figure_1.Rmd
@@ -40,7 +40,7 @@ umap_pt_size <- 0.2
 key <- read_csv('../data/food_group_color_key_final.csv', col_types = 'ccccc')
 transplant_day <- 0
 dayzeroline_size <- 1
-scatter_transparency <- 0.05
+scatter_transparency <- 0.1
 day0_line_color <- 'gray40'
 
 # the colors for each food group specified and saved here
@@ -68,8 +68,11 @@ dtb  <- read_csv('../data/152_combined_DTB.csv')
 meta <- read_csv('../data/153_combined_META.csv')
 
 # how many stool samples per patient
-meta %>% count(pid) %>% summarise(med = median(n))
+meta %>% count(pid) %>% summarise(med = median(n), min_ = min(n), max_ = max(n))
+```
 
+
+```{r load_table}
 dtb %>% distinct(Food_code)
 
 # how many days of data among all of the patients?
@@ -150,19 +153,28 @@ smoothie <- dtb %>%
 # import the tree from pdf to a ggplot kind of object
 schematic <- '../data/transplant_schematic.png'
 schematic_plot <- ggdraw() +
-  draw_image(schematic,   scale = 0.9) 
+  draw_image(schematic,   scale = 1.1)  
 
 ```
 
-# 1D: food_tree
 
-```{r tree}
-# import the tree from pdf to a ggplot kind of object
-p <- '../data/080_food_tree_ring.jpg'
-tree <- ggdraw() +
-  draw_image(p,   scale = 1.1) 
+# 1B: diet_hist
+
+```{r diet_hist}
+# the histogram of the N meals over transplant time
+diet_hist <- dtb %>% 
+  distinct(pid, Meal, fdrt) %>% 
+  gghistogram(x = 'fdrt', xlab = 'Transplant day', ylab = 'Meals recorded', 
+              color = diet_line_color, fill = diet_line_color, alpha = 0.5)+
+    scale_x_continuous( breaks = seq(-10, 50, 20)) + 
+  geom_vline(xintercept = transplant_day, linetype = 'dashed', size = dayzeroline_size, color = day0_line_color) +
+  annotate("text", x = 5, y = 900, label = "173 patients,\n9,419 total meals\n40,702 food items", hjust = 0, size = 2.5) +
+  theme_classic(base_size = 8) +
+  theme(aspect.ratio=1/1.5,
+         axis.title=element_text(size=axis_title_size))
+    
+diet_hist
 ```
-
 
 
 # 1C: stool_hist 
@@ -182,23 +194,18 @@ stool_hist <- meta %>%
 stool_hist   
 ```
 
-# 1B: diet_hist
+# 1D: food_tree
 
-```{r diet_hist}
-# the histogram of the N meals over transplant time
-diet_hist <- dtb %>% 
-  distinct(pid, Meal, fdrt) %>% 
-  gghistogram(x = 'fdrt', xlab = 'Transplant day', ylab = 'Meals recorded', 
-              color = diet_line_color, fill = diet_line_color, alpha = 0.5)+
-    scale_x_continuous( breaks = seq(-10, 50, 20)) + 
-  geom_vline(xintercept = transplant_day, linetype = 'dashed', size = dayzeroline_size, color = day0_line_color) +
-  annotate("text", x = 5, y = 900, label = "173 patients,\n9,419 total meals\n40,702 food items", hjust = 0, size = 2.5) +
-  theme_classic(base_size = 8) +
-  theme(aspect.ratio=1/1.5,
-         axis.title=element_text(size=axis_title_size))
-    
-diet_hist
+```{r tree}
+# import the tree from pdf to a ggplot kind of object
+p <- '../data/080_food_tree_ring.jpg'
+tree <- ggdraw() +
+  draw_image(p,   scale = 1.1) 
 ```
+
+
+
+
 # 1M: stool line 
 
 ```{r stool_alpha}
@@ -208,6 +215,7 @@ stool_alpha <- meta %>%
   geom_smooth(aes(x = sdrt, y = simpson_reciprocal), method = "loess", formula = 'y ~ x', colour = stool_line_color ,  size = 1, fill = 'darkblue') +
   geom_vline(xintercept = transplant_day, linetype = 'dashed', size = dayzeroline_size, color = day0_line_color) +
   labs( x = 'Transplant day',title = 'Microbiome\nalpha diversity', y = '') +
+  scale_y_sqrt() +
   theme_classic(base_size = 8) +
    scale_x_continuous( breaks = seq(0, 50, 20)) + 
   theme(axis.text=element_text(size=8), axis.title=element_text(size=axis_title_size),
@@ -239,7 +247,7 @@ pval <- 1-pnorm(abs(zscore))
 pval
 ```
 
-# 1G: cal line
+# 1I: cal line
 
 ```{r }
 day_calori <- dtb %>% 
@@ -254,6 +262,7 @@ cal_line <- day_calori %>%
   geom_vline(xintercept = transplant_day, linetype = 'dashed', size = dayzeroline_size, color = day0_line_color) +
   labs( x = '',title = 'Caloric intake', y = '*1000 Kcal') +
   scale_x_continuous( breaks = seq(0, 50, 20)) +
+  scale_y_sqrt() +
   theme_classic(base_size = 8) +
   theme(axis.text.y=element_text(size=8),
         axis.text.x=element_blank(),
@@ -263,7 +272,7 @@ cal_line <- day_calori %>%
         plot.title = element_text(size=axis_title_size),aspect.ratio=1)
 cal_line
 ```
-# 1H: diet alpha line
+# 1J: diet alpha line
 
 ```{r}
 # this faith pd is all the combined data of the patients
@@ -275,8 +284,9 @@ faith_line <- faith %>%
   rasterise(geom_point(aes(x = fdrt, y = faith_pd), alpha = scatter_transparency,size = point_size , shape = 16), dpi = 300) +
   geom_smooth(aes(x = fdrt, y = faith_pd), method = "loess", formula = 'y ~ x', colour = diet_line_color ,  size = 1, fill = 'hotpink') +
   geom_vline(xintercept = transplant_day, linetype = 'dashed', size = dayzeroline_size, color = day0_line_color) +
-  labs( x = '',title = 'Diet alpha diversity', y = '*1000') +
+  labs( x = '',title = 'Diet a diversity', y = '*1000') +
   scale_x_continuous( breaks = seq(0, 50, 20)) +
+  scale_y_sqrt() +
   theme_classic(base_size = 8) +
   theme(axis.text.y=element_text(size=8),
         axis.text.x=element_blank(),
@@ -292,37 +302,37 @@ faith_line
 ```{r}
 # the p value from GEE about the G and H
 # 1G caloric intake
-mod_cal <- geeglm(log(daycal+1) ~ fdrt,
-                          family=gaussian,
-                          corstr = "ar1",
-                          id=pid,
-                          data=food %>% mutate(pid = as.factor(pid)))
-
-# Wald p-value
-# Alternative hypothesis: slope is less than zero
-# Z-score calculation
-zscore = coef(mod_cal)[2]/sqrt(vcov(mod_cal)[2,2])
-# One-sided p-value
-pval <- 1-pnorm(abs(zscore))
-# the p value for the 1G
-pval
+# mod_cal <- geeglm(log(daycal+1) ~ fdrt,
+#                           family=gaussian,
+#                           corstr = "ar1",
+#                           id=pid,
+#                           data=food %>% mutate(pid = as.factor(pid)))
+# 
+# # Wald p-value
+# # Alternative hypothesis: slope is less than zero
+# # Z-score calculation
+# zscore = coef(mod_cal)[2]/sqrt(vcov(mod_cal)[2,2])
+# # One-sided p-value
+# pval <- 1-pnorm(abs(zscore))
+# # the p value for the 1G
+# pval
 ```
 ```{r}
 # 1H diet diversity
-mod_faith_pd <- geeglm(log(faith_pd) ~ fdrt,
-                          family=gaussian,
-                          corstr = "ar1",
-                          id=pid,
-                          data=food%>% mutate(pid = as.factor(pid)))
-
-# Wald p-value
-# Alternative hypothesis: slope is less than zero
-# Z-score calculation
-zscore = coef(mod_faith_pd)[2]/sqrt(vcov(mod_faith_pd)[2,2])
-# One-sided p-value
-pval <- 1-pnorm(abs(zscore))
-# the p value for the 1H
-pval
+# mod_faith_pd <- geeglm(log(faith_pd) ~ fdrt,
+#                           family=gaussian,
+#                           corstr = "ar1",
+#                           id=pid,
+#                           data=food%>% mutate(pid = as.factor(pid)))
+# 
+# # Wald p-value
+# # Alternative hypothesis: slope is less than zero
+# # Z-score calculation
+# zscore = coef(mod_faith_pd)[2]/sqrt(vcov(mod_faith_pd)[2,2])
+# # One-sided p-value
+# pval <- 1-pnorm(abs(zscore))
+# # the p value for the 1H
+# pval
 ```
 
 # 1E-H: UMAPs
@@ -348,7 +358,7 @@ fg_sum <- dtb %>%
 
 # find out why the few dots are on that far island
 OUT <- read_csv('../data/072_taxumap_embedding_cleaned_pid.csv')
-
+  
 color_key <- OUT %>% 
   distinct( color, shortname) %>% select(shortname, color) %>% 
   deframe()
@@ -362,7 +372,7 @@ out2_umap <- OUT %>%
   #arrange(desc(n)) %>% 
   ggplot() +
   rasterise(geom_point(aes(x = taxumap1, y = taxumap2, color = shortname), alpha = 1,size = umap_pt_size , shape = 16), dpi = 300) +
-  labs(x = 'TaxUMAP1', y = 'TaxUMAP2') +
+  labs(x = 'TaxUMAP1', y = 'TaxUMAP2', title = 'Most consumed\nfood group') +
   scale_color_manual(values = color_key) +
   theme_classic() +
   #lemon::coord_capped_cart(bottom = 'both', left = 'both') +
@@ -378,6 +388,7 @@ out2_umap <- OUT %>%
     legend.background = element_rect(fill='transparent'), #transparent legend bg
     legend.box.background = element_rect(fill='transparent') , aspect.ratio=1) +
   guides(colour = guide_legend(override.aes = list(alpha=1)))
+out2_umap
 ```
 
 ## 1E: daily cal intake
@@ -394,6 +405,7 @@ out2_caloric <- out2_cal %>%
     ggplot() +
   rasterise(geom_point(aes(x = taxumap1, y = taxumap2, color = transform_cal), alpha = 1,size = umap_pt_size , shape = 16), dpi = 300) +
   paletteer::scale_color_paletteer_c("viridis::plasma") +
+  labs(title = 'Caloric intake\n(*1000 Kcal)') +
   theme_classic() +
   #lemon::coord_capped_cart(bottom = 'both', left = 'both') +
   theme(line = element_blank(),
@@ -428,6 +440,7 @@ umap_faith <- out_faith %>%
     ggplot() +
   rasterise(geom_point(aes(x = taxumap1, y = taxumap2, color = faith_pd), alpha = 1,size = umap_pt_size , shape = 16), dpi = 300) +
   scale_color_viridis() +
+  labs(title = 'Diet a diversity\n(*1000)') +
   theme_classic() +
   theme(line = element_blank(),
         legend.title = element_blank(),
@@ -476,6 +489,7 @@ umap_drt_high_to_low_bin <- umap_time_df %>%
     ggplot() +
   rasterise(geom_point(aes(x = taxumap1, y = taxumap2, color = bin), alpha = 1,size = umap_pt_size , shape = 16), dpi = 300) +
    scale_color_manual(values = RColorBrewer::brewer.pal(9,"Spectral"))  +
+  labs(title = 'Day relative to\ntransplant') +
    theme_classic() +
    theme(
          line = element_blank(),
@@ -530,6 +544,10 @@ dailymacro <- bind_rows(
 #   ggscatter( x= 'Carbohydrates',y ='Sugars') +
 #   stat_cor(method = "pearson") +
 #   geom_abline(slope = 1, intercept = 0, color = 'red')
+
+dailymacro %>% ungroup() %>% 
+  filter(grp == 'Fibers') %>% 
+  summarise(med = median(eachsum))
 ```
 ```{r}
 # the p value from GEE about the panels in each of these macronutrients
@@ -557,7 +575,7 @@ macro5 <- dailymacro %>%
 macro5
 # how to show these as p values 
 ```
-# 1I: the macronutrients 3 by 2 grid
+# 1K: the macronutrients 3 by 2 grid
 
 ```{r 3X2}
 m_panel <- dailymacro %>% 
@@ -569,6 +587,7 @@ m_panel <- dailymacro %>%
   labs( x = 'Transplant day',title = 'Macronutrients', y = 'Grams') +
   facet_wrap(~ grp, nrow = 3, scales = 'free_y') +
   scale_x_continuous( breaks = seq(0, 50, 20)) + 
+  scale_y_sqrt() +
   theme_classic() +
   theme(axis.text=element_text(size=6),
         strip.background = element_rect(color="white", fill=strip_color, size=1.5,linetype="solid"),
@@ -579,7 +598,7 @@ m_panel <- dailymacro %>%
 m_panel
 ```
 
-# 1J: the food group  3 by 3 grid 
+# 1L: the food group  3 by 3 grid 
 
 ```{r 3X3}
 fg_all <- dtb %>%  
@@ -658,7 +677,6 @@ title <- ggdraw() +
 
 # assemble the two hists
 two_hist <- plot_grid(diet_hist,  stool_hist, labels = c('B', 'C'),
-                      #rel_heights = c(1, -0.4, 1) ,
           ncol = 2, hjust = 0.5,
           align = 'hv',
           axis = 'tblr') 
@@ -667,12 +685,10 @@ two_hist <- plot_grid(diet_hist,  stool_hist, labels = c('B', 'C'),
 # top row 
 top_left <- plot_grid(schematic_plot, two_hist,
           nrow = 2, 
-         #rel_widths = c(.8,1.5), 
           labels = c('A', NA))
 
 top_row <- plot_grid(top_left, tree,
           nrow = 1, 
-         #rel_widths = c(.8,1.5), 
           labels = c(NA, 'D'))
 
 
@@ -684,15 +700,15 @@ middle_maps <- plot_grid( out2_caloric, umap_faith, out2_umap, umap_drt_high_to_
           axis = 'tblr')
 ```
 
+# bottom_left 
 
 ```{r}
-bottom_left <- plot_grid(cal_line, faith_line, stool_alpha,
-                      rel_heights = c( 1,1, 1) ,
-                      labels = c('I','J','M'), 
+bottom_left <- plot_grid(cal_line, NA, faith_line, NA, stool_alpha,
+                      rel_heights = c( 1,-0.4, 1, -0.4, 1) ,
+                      labels = c('I',NA,'J',NA,'M'), 
           ncol = 1, hjust = 0.5,
           align = 'hv',
           axis = 'tblr')
-bottom_left
 
 ```
 
@@ -702,7 +718,7 @@ bottom_row <- plot_grid(bottom_left,m_panel, fg_panel,
           #align = 'h',
           labels = c(NA, 'K', 'L'),
           #axis = 'tblr',
-          rel_widths =  c(0.9,1.4,2))
+          rel_widths =  c(.7,1.4,2))
 
 # assemble all macro_facets
 f1 <-  plot_grid(top_row, middle_maps, bottom_row, 
@@ -747,92 +763,4 @@ ggsave('../data/F1_overview_raw_072_new_test.pdf',
 # ggsave('../data/072_foodgroup_color_name.svg')
 ```
 
-The last panel of the F1
-
-```{r}
-# full <- read_csv('../data/090_all_samples1009_meta_p2d_fg9_dietall_genera90_pid.csv')
-# 
-# byday_original <- dtb %>% 
-#   group_by(pid, fdrt) %>% 
-#   summarise(daycal = sum(Calories_kcal),
-#             d_protein = sum(Protein_g),
-#             d_fat = sum(Fat_g),
-#             d_carb = sum(Carbohydrates_g),
-#             d_fiber = sum(Fibers_g),
-#             d_sugar = sum(Sugars_g)) %>% 
-#   rename(drt = fdrt) %>% 
-#   inner_join(full %>% 
-#                rename(drt = sdrt) %>% 
-#                select(pid,drt, simpson_reciprocal,  Blautia, Enterococcus, intensity), by = c("pid", "drt")) %>% 
-#   ungroup()
-```
-```{r}
-# macro_panel <- byday_original %>% 
-#   mutate(simpson_reciprocal_nlog  = log(simpson_reciprocal)) %>% 
-#   rename(`log10(Blautia)` = Blautia,
-#          `log10(Enterococcus)` = Enterococcus,
-#          `log(Simpson reciprocal)` = simpson_reciprocal_nlog) %>% 
-#   dplyr::select(`log(Simpson reciprocal)`, `log10(Blautia)`, `log10(Enterococcus)`,  daycal:d_sugar ) %>% 
-#   mutate(daycal = daycal/1000) %>%  # now divide the value by 1000 to save some space in x axis text!!! 
-#   gather('yaxis', 'value', `log(Simpson reciprocal)`:`log10(Enterococcus)`) %>% 
-#   mutate(yaxis = factor(yaxis, levels = c('log(Simpson reciprocal)','log10(Blautia)','log10(Enterococcus)'))) %>% 
-#   gather('xaxis', 'number', daycal:d_sugar) %>% 
-#   mutate(xaxis = factor(xaxis, levels = c('daycal','d_carb','d_sugar','d_fiber','d_protein','d_fat'))) %>% 
-#   mutate(xaxis = if_else(str_detect(xaxis, '^d_'), str_replace(xaxis, 'd_',''), str_replace(xaxis, '^day','')),
-#          xaxis = if_else(str_detect(xaxis, 'cal'), str_replace(xaxis, 'cal','calorie'), xaxis),
-#          xaxis = if_else(str_detect(xaxis, 'carb'), str_replace(xaxis, 'carb','carbohydrate'), xaxis),
-#          xaxis = str_to_title(xaxis),
-#          xaxis = str_glue('{xaxis}')) %>% 
-#   mutate(xaxis = factor(xaxis, levels = c('Calorie','Carbohydrate','Sugar','Fiber','Protein','Fat')))
-```
-
-```{r}
-# library(facetscales)
-# Blautia_lim <- floor(min(byday_original$Blautia))
-# entero_lim <- floor(min(byday_original$Enterococcus))
-# simpson_reciprocal_nlog_lim <- max(log(byday_original$simpson_reciprocal))
-# 
-# scales_y <- list(
-#   `log(Simpson reciprocal)` = scale_y_continuous(limits = c(0, simpson_reciprocal_nlog_lim), breaks = seq(0, simpson_reciprocal_nlog_lim, 1)),
-#   `log10(Blautia)` = scale_y_continuous(limits = c(Blautia_lim, 0), breaks = seq(Blautia_lim, 0, 2)),
-#   `log10(Enterococcus)` = scale_y_continuous(limits = c(entero_lim, 0), breaks = seq(entero_lim, 0, 2))
-# )
-# 
-# # to use the max observed in the data
-# cal_lim <- max(byday_original$daycal)/1000
-# protein_lim <- max(byday_original$d_protein)
-# d_fat_lim <- max(byday_original$d_fat)
-# d_carb_lim <- max(byday_original$d_carb)
-# d_fiber_lim <- max(byday_original$d_fiber)
-# d_sugar_lim <- max(byday_original$d_sugar)
-# 
-# scales_x <- list(
-#   `Calorie` = scale_x_continuous(limits = c(0, cal_lim), breaks = seq(0, cal_lim, 1)),
-#   `Protein` = scale_x_continuous(limits = c(0, protein_lim), breaks = seq(0, protein_lim, 50)),
-#   `Fat` = scale_x_continuous(limits = c(0, d_fat_lim), breaks = seq(0, d_fat_lim, 100)),
-#   `Carbohydrate` = scale_x_continuous(limits = c(0, d_carb_lim), breaks = seq(0, d_carb_lim, 250)),
-#   `Fiber` = scale_x_continuous(limits = c(0,d_fiber_lim), breaks = seq(0, d_fiber_lim, 20)),        
-#   `Sugar` = scale_x_continuous(limits = c(0, d_sugar_lim), breaks = seq(0, d_sugar_lim, 100) )
-# )
-```
-
-
-
-```{r}
-# macro_facets <- macro_panel %>% 
-#      ggplot() +
-#   rasterise(geom_point(aes(x = number, y = value), alpha = 0.02,size = 1 , shape = 16), dpi = 300) +
-#   geom_smooth(aes(x = number, y = value), method = "lm", colour = 'darkblue' ,  size = 1, fill = 'gray59') +
-#   labs( x = '',title = '', y = '') +
-#   stat_cor(aes(x = number, y = value), method = "spearman",  label.sep = ", ",label.x.npc = "left", label.y.npc = "bottom", cor.coef.name = c("rho"), size = 2, p.accuracy = 0.01, r.accuracy = 0.01) +
-#   facet_grid_sc(rows = vars(yaxis), cols = vars(xaxis), scales = list(y = scales_y, x = scales_x)) +
-#   theme_classic(base_size = 11) +
-#   theme(aspect.ratio = 1,
-#         panel.background = element_rect(fill = "gray97"),axis.title=element_text(size=axis_title_size),
-#         plot.title = element_text(size=axis_title_size),
-#         panel.grid.major = element_blank(), 
-#         strip.background = element_rect(color="white", fill=strip_color, size=1.5,linetype="solid"),
-#         panel.grid.minor = element_blank()
-#        )
-# macro_facets
-```
+ 
