--- a/scripts/R11_cluster_patient_char__code_for_Table_S2.Rmd
+++ b/scripts/R11_cluster_patient_char__code_for_Table_S2.Rmd
@@ -12,6 +12,7 @@ knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 library(ggpubr)
 library(gtsummary)
+library(cowplot)
 ```
 
 
@@ -19,6 +20,16 @@ library(gtsummary)
 PTB <- read_csv('../data/003_combined_PTB_pid.csv') %>% 
   separate(modal_diet, into = c('cluster_id','cluster_name'), sep = '\\:') %>% 
   mutate(cluster_id = if_else(cluster_id == 'cluster2', 'cluster 2', cluster_id))
+
+
+load("../data/df_main_Dec10.Rdata")
+new <- read_csv('../data/003_combined_PTB_pid.csv') %>% 
+  full_join(link) %>% 
+  select(-modal_diet) %>% 
+  full_join(df_main %>% select(mrn, modal_diet)) %>% 
+  rename(cluster_id = modal_diet)
+new %>% count(cluster_id)
+PTB <- new
 ```
 
 
@@ -67,24 +78,29 @@ final <- PTB %>%
   rename(Sex = sex, Age = age, `GvHD prophylaxis` = gvhd_ppx,
          `Days exposed to broad-spectrum antibiotics` = day_exposed)
 
-final %>% 
-  tbl_summary(
-    #type = list(all_double() ~ "continuous"), 
-    #statistic = list(all_continuous() ~ "{mean} ({sd})"),
-    by=cluster_id
-  ) %>%
-  bold_labels() %>% 
-  as_gt() %>%
-  #gt::tab_footnote(footnote = "MDS/MPN = Myelodysplastic/myeloproliferative neoplasms") %>% 
-  gt::gtsave(filename = "../data/11_patient_summary_clusters.png")
+#%>%
+#  mutate(cluster_id = if_else(cluster_id  == 'cluster 1', 'Cluster 1','Cluster 2'))
 ```
 
+
 ```{r}
+
+
+final %>% 
+  tbl_summary(
+    statistic = list(all_continuous() ~ "{median} ({IQR})", all_categorical() ~ "{n} ({p}%)"),
+    by=cluster_id
+  ) %>%
+  add_p() %>%
+  bold_labels() %>% 
+  as_gt() %>%
+  gt::gtsave(filename = "../data/11_patient_summary_clusters.png")
+
 table_ <- ggdraw() + draw_image("../data/11_patient_summary_clusters.png", scale = 0.7)
 
  title <- ggdraw() + 
   draw_label(
-    "Table S_X",
+    "Table S2",
     fontface = 'bold',
     x = 0,
     hjust = 0
@@ -101,6 +117,6 @@ combined <- plot_grid(
   rel_heights = c(0.1, 1)
 )+theme(plot.margin = unit(c(1,1,1,1), "cm"))
 
-ggsave('../data/Table_SX_patient_summary__cluster_11.pdf',
+ggsave('../data/Table_S2_patient_summary__cluster_11.pdf',
       width = 210, height = 297, units = "mm", device = 'pdf', plot = combined, dpi = 300)  
 ```
